File includes a cal to the Manifest

--- a/dev/index.pug
+++ b/dev/index.pug
@@ -5,6 +5,7 @@ html(lang="en")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		link(rel="icon" href="./assets/img/favicon-dark-mode.svg" media="(prefers-color-scheme: dark)")
 		link(rel="icon" href="./assets/img/favicon-light-mode.svg" media="(prefers-color-scheme: light)")
+		link(rel="manifest" href="./manifest.json")
 		link(rel="stylesheet" href="./assets/css/styles.min.css")
 		script(type="module" src="./assets/js/scripts.min.js") 
 		title Men In Black Neuralizer
