--- a/dev/index.pug
+++ b/dev/index.pug
@@ -3,6 +3,9 @@ html(lang="en")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
+		meta(name="theme-color" content="#000000")
+		//- Support for Safari (iOS)
+		meta(name="apple-mobile-web-app-status-bar-style" content="black")
 		link(rel="icon" href="./assets/img/favicon-dark-mode.svg" media="(prefers-color-scheme: dark)")
 		link(rel="icon" href="./assets/img/favicon-light-mode.svg" media="(prefers-color-scheme: light)")
 		link(rel="manifest" href="./manifest.json")
