Icon of the project updated

--- a/dev/index.pug
+++ b/dev/index.pug
@@ -6,8 +6,7 @@ html(lang="en")
 		meta(name="theme-color" content="#000000")
 		//- Support for Safari (iOS)
 		meta(name="apple-mobile-web-app-status-bar-style" content="black")
-		link(rel="icon" href="./assets/img/favicon-dark-mode.svg" media="(prefers-color-scheme: dark)")
-		link(rel="icon" href="./assets/img/favicon-light-mode.svg" media="(prefers-color-scheme: light)")
+		link(rel="icon" href="./assets/img/favicon-dark-mode.svg")
 		link(rel="manifest" href="./manifest.json")
 		link(rel="stylesheet" href="./assets/css/styles.min.css")
 		script(type="module" src="./assets/js/scripts.min.js") 
